--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,21 +5,20 @@ package:
   version: {{ version }}
 
 source:
-  fn: httpretty-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/h/httpretty/httpretty-{{ version }}.tar.gz
   sha256: 69259e22addf5ab5f25bd00c6568e16fc2e54efdd4da69eb0950718dba3b2dab
 
 build:
   number: 0
-  skip: True  # [py3k]
-  script: python setup.py install --single-version-externally-managed --record record.txt
+  script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
   build:
     - python
-    - setuptools
+    - pip
   run:
     - python
+    - six
 
 test:
   imports:
